--- a/index.html
+++ b/index.html
@@ -13,11 +13,23 @@ body {
 h2, h3 { color: #003f88; }
 
 .card {
-  padding: 15px;
+  padding: 18px;
   background: white;
-  border-radius: 8px;
+  border-radius: 10px;
   box-shadow: 0 2px 6px rgba(0,0,0,0.15);
-  margin-top: 15px;
+  margin-top: 18px;
+}
+
+.grid {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  gap: 18px;
+  margin-top: 10px;
+}
+
+.label {
+  font-weight: bold;
+  color: #003f88;
 }
 
 /* CONTROLS */
@@ -25,7 +37,6 @@ h2, h3 { color: #003f88; }
   display: flex;
   gap: 10px;
   margin: 10px 0;
-  flex-wrap: wrap;
 }
 .controls input {
   padding: 6px;
@@ -36,8 +47,8 @@ h2, h3 { color: #003f88; }
   background: #003f88;
   color: white;
   border: none;
-  cursor: pointer;
   border-radius: 4px;
+  cursor: pointer;
 }
 
 /* TABLE */
@@ -49,7 +60,6 @@ table {
 th, td {
   border: 1px solid #ccc;
   padding: 6px 8px;
-  text-align: left;
 }
 th {
   background: #003f88;
@@ -57,15 +67,13 @@ th {
   position: sticky;
   top: 0;
 }
-
-/* DATE COLUMN WIDTH (3rd column) */
 th:nth-child(3),
 td:nth-child(3) {
-  width: 90px;
+  width: 95px;
   white-space: nowrap;
 }
 
-/* PRINT / PDF */
+/* PRINT */
 @media print {
   .controls { display: none; }
   body { background: white; }
@@ -76,29 +84,28 @@ td:nth-child(3) {
 <body>
 
 <h2>Drive Information</h2>
-<div id="drive">Loading drive details...</div>
-
+<div id="drive">Loading drive details…</div>
 <div id="history"></div>
 
 <script>
-// -------- DATE FORMAT --------
-function formatDate(val) {
-  if (typeof val === "string" && val.startsWith("Date(")) {
-    const p = val.match(/\d+/g);
+// ---------- DATE FORMAT ----------
+function formatDate(v) {
+  if (typeof v === "string" && v.startsWith("Date(")) {
+    const p = v.match(/\d+/g);
     if (p) {
       const y = p[0];
-      const m = String(+p[1] + 1).padStart(2, "0");
-      const d = String(p[2]).padStart(2, "0");
+      const m = String(+p[1] + 1).padStart(2,"0");
+      const d = String(p[2]).padStart(2,"0");
       return `${d}-${m}-${y}`;
     }
   }
-  if (/^\d{2}\/\d{2}\/\d{4}$/.test(val)) {
-    return val.replace(/\//g, "-");
+  if (/^\d{2}\/\d{2}\/\d{4}$/.test(v)) {
+    return v.replace(/\//g,"-");
   }
-  return val ?? "";
+  return v ?? "";
 }
 
-// -------- LOAD DRIVE --------
+// ---------- LOAD DRIVE ----------
 async function loadDrive() {
   const id = new URLSearchParams(location.search).get("id");
   if (!id) return;
@@ -112,13 +119,24 @@ async function loadDrive() {
   const j = JSON.parse(t.substring(47, t.length - 2));
 
   let m = null;
+
   j.table.rows.forEach(r => {
     const c = r.c || [];
     if (`${c[1]?.v}-${c[2]?.v}`.toUpperCase() !== id.toUpperCase()) return;
+
     m = {
       BAT: c[1]?.v,
       EQP: c[2]?.v,
-      TYPE: c[4]?.v
+      pumpType: c[4]?.v,
+      ratings: c[5]?.v,
+      flc: c[10]?.v,
+      sfu: c[14]?.v,
+      fuse: c[15]?.v,
+      contactor: c[16]?.v,
+      relay: c[17]?.v,
+      ctM: c[18]?.v,
+      ctP: c[19]?.v,
+      aux: c[20]?.v
     };
   });
 
@@ -127,14 +145,32 @@ async function loadDrive() {
   document.getElementById("drive").innerHTML = `
     <div class="card">
       <h3>${m.BAT} – ${m.EQP}</h3>
-      <b>Pump Type:</b> ${m.TYPE}
+      <p><span class="label">Pump Type:</span> ${m.pumpType}</p>
+
+      <div class="grid">
+        <div>
+          <p><span class="label">Ratings:</span> ${m.ratings}</p>
+          <p><span class="label">FLC:</span> ${m.flc}</p>
+        </div>
+        <div>
+          <p><span class="label">SFU:</span> ${m.sfu}</p>
+          <p><span class="label">Fuse:</span> ${m.fuse}</p>
+          <p><span class="label">Contactor:</span> ${m.contactor}</p>
+          <p><span class="label">Relay:</span> ${m.relay}</p>
+        </div>
+        <div>
+          <p><span class="label">CT (M):</span> ${m.ctM}</p>
+          <p><span class="label">CT (P):</span> ${m.ctP}</p>
+          <p><span class="label">Aux Contactor:</span> ${m.aux}</p>
+        </div>
+      </div>
     </div>
   `;
 
   loadHistory(id);
 }
 
-// -------- LOAD HISTORY --------
+// ---------- LOAD HISTORY ----------
 async function loadHistory(id) {
   const out = document.getElementById("history");
 
@@ -148,9 +184,9 @@ async function loadHistory(id) {
 
   const rows = j.table.rows;
   const cols = j.table.cols;
+  const showCols = [0,1,4,5,6,7,9,10]; // A,B,E,F,G,H,J,K
 
   let data = [];
-
   rows.forEach(r => {
     const c = r.c || [];
     if (`${c[2]?.v}-${c[3]?.v}`.toUpperCase() !== id.toUpperCase()) return;
@@ -162,14 +198,12 @@ async function loadHistory(id) {
     return;
   }
 
-  const showCols = [0,1,4,5,6,7,9,10]; // A,B,E,F,G,H,J,K
-
   let html = `
   <div class="card">
     <h3>History</h3>
 
     <div class="controls">
-      <input type="text" id="search" placeholder="Search...">
+      <input id="search" placeholder="Search…">
       <button onclick="exportExcel()">Export Excel</button>
       <button onclick="window.print()">Export PDF</button>
     </div>
@@ -194,30 +228,25 @@ async function loadHistory(id) {
   html += "</tbody></table></div>";
   out.innerHTML = html;
 
-  document.getElementById("search").addEventListener("keyup", filterTable);
+  document.getElementById("search").onkeyup = function() {
+    const q = this.value.toLowerCase();
+    document.querySelectorAll("#historyTable tbody tr")
+      .forEach(tr => tr.style.display =
+        tr.innerText.toLowerCase().includes(q) ? "" : "none");
+  };
 }
 
-// -------- SEARCH --------
-function filterTable() {
-  const q = this.value.toLowerCase();
-  document.querySelectorAll("#historyTable tbody tr").forEach(tr => {
-    tr.style.display = tr.innerText.toLowerCase().includes(q) ? "" : "none";
-  });
-}
-
-// -------- EXPORT EXCEL --------
+// ---------- EXPORT ----------
 function exportExcel() {
   let csv = [];
   document.querySelectorAll("#historyTable tr").forEach(row => {
-    let cols = [...row.children].map(td =>
+    csv.push([...row.children].map(td =>
       `"${td.innerText.replace(/"/g,'""')}"`
-    );
-    csv.push(cols.join(","));
+    ).join(","));
   });
 
-  const blob = new Blob([csv.join("\n")], { type: "text/csv" });
   const a = document.createElement("a");
-  a.href = URL.createObjectURL(blob);
+  a.href = URL.createObjectURL(new Blob([csv.join("\n")]));
   a.download = "history.csv";
   a.click();
 }
