--- a/index.html
+++ b/index.html
@@ -10,10 +10,12 @@ body {
   padding: 20px;
   background: #f2f6ff;
 }
-h2, h3 { color: #003f88; }
+h2, h3 {
+  color: #003f88;
+}
 
 .card {
-  padding: 18px;
+  padding: 20px;
   background: white;
   border-radius: 10px;
   box-shadow: 0 2px 6px rgba(0,0,0,0.15);
@@ -32,51 +34,22 @@ h2, h3 { color: #003f88; }
   color: #003f88;
 }
 
-/* CONTROLS */
-.controls {
-  display: flex;
-  gap: 10px;
-  margin: 10px 0;
+.button-wrap {
+  margin-top: 20px;
+  text-align: right;
 }
-.controls input {
-  padding: 6px;
-  width: 220px;
-}
-.controls button {
-  padding: 6px 12px;
+
+button {
+  padding: 10px 18px;
   background: #003f88;
   color: white;
   border: none;
-  border-radius: 4px;
+  border-radius: 6px;
   cursor: pointer;
+  font-size: 15px;
 }
-
-/* TABLE */
-table {
-  width: 100%;
-  border-collapse: collapse;
-  font-size: 14px;
-}
-th, td {
-  border: 1px solid #ccc;
-  padding: 6px 8px;
-}
-th {
-  background: #003f88;
-  color: white;
-  position: sticky;
-  top: 0;
-}
-th:nth-child(3),
-td:nth-child(3) {
-  width: 95px;
-  white-space: nowrap;
-}
-
-/* PRINT */
-@media print {
-  .controls { display: none; }
-  body { background: white; }
+button:hover {
+  opacity: 0.9;
 }
 </style>
 </head>
@@ -84,171 +57,61 @@ td:nth-child(3) {
 <body>
 
 <h2>Drive Information</h2>
+
 <div id="drive">Loading drive details…</div>
-<div id="history"></div>
 
 <script>
-// ---------- DATE FORMAT ----------
-function formatDate(v) {
-  if (typeof v === "string" && v.startsWith("Date(")) {
-    const p = v.match(/\d+/g);
-    if (p) {
-      const y = p[0];
-      const m = String(+p[1] + 1).padStart(2,"0");
-      const d = String(p[2]).padStart(2,"0");
-      return `${d}-${m}-${y}`;
-    }
-  }
-  if (/^\d{2}\/\d{2}\/\d{4}$/.test(v)) {
-    return v.replace(/\//g,"-");
-  }
-  return v ?? "";
-}
+function loadDrive() {
+  const params = new URLSearchParams(window.location.search);
+  const id = params.get("id");
 
-// ---------- LOAD DRIVE ----------
-async function loadDrive() {
-  const id = new URLSearchParams(location.search).get("id");
-  if (!id) return;
-
-  const url =
-    "https://docs.google.com/spreadsheets/d/1Ar9-a9u4b622-6i8b889qGqENI8rl8Q2U6PPOPBaLDc/gviz/tq" +
-    "?gid=1274719919&tqx=out:json";
-
-  const r = await fetch(url);
-  const t = await r.text();
-  const j = JSON.parse(t.substring(47, t.length - 2));
-
-  let m = null;
-
-  j.table.rows.forEach(r => {
-    const c = r.c || [];
-    if (`${c[1]?.v}-${c[2]?.v}`.toUpperCase() !== id.toUpperCase()) return;
-
-    m = {
-      BAT: c[1]?.v,
-      EQP: c[2]?.v,
-      pumpType: c[4]?.v,
-      ratings: c[5]?.v,
-      flc: c[10]?.v,
-      sfu: c[14]?.v,
-      fuse: c[15]?.v,
-      contactor: c[16]?.v,
-      relay: c[17]?.v,
-      ctM: c[18]?.v,
-      ctP: c[19]?.v,
-      aux: c[20]?.v
-    };
-  });
-
-  if (!m) return;
-
-  document.getElementById("drive").innerHTML = `
-    <div class="card">
-      <h3>${m.BAT} – ${m.EQP}</h3>
-      <p><span class="label">Pump Type:</span> ${m.pumpType}</p>
-
-      <div class="grid">
-        <div>
-          <p><span class="label">Ratings:</span> ${m.ratings}</p>
-          <p><span class="label">FLC:</span> ${m.flc}</p>
-        </div>
-        <div>
-          <p><span class="label">SFU:</span> ${m.sfu}</p>
-          <p><span class="label">Fuse:</span> ${m.fuse}</p>
-          <p><span class="label">Contactor:</span> ${m.contactor}</p>
-          <p><span class="label">Relay:</span> ${m.relay}</p>
-        </div>
-        <div>
-          <p><span class="label">CT (M):</span> ${m.ctM}</p>
-          <p><span class="label">CT (P):</span> ${m.ctP}</p>
-          <p><span class="label">Aux Contactor:</span> ${m.aux}</p>
-        </div>
-      </div>
-    </div>
-  `;
-
-  loadHistory(id);
-}
-
-// ---------- LOAD HISTORY ----------
-async function loadHistory(id) {
-  const out = document.getElementById("history");
-
-  const url =
-    "https://docs.google.com/spreadsheets/d/1Ar9-a9u4b622-6i8b889qGqENI8rl8Q2U6PPOPBaLDc/gviz/tq" +
-    "?gid=751880096&tqx=out:json";
-
-  const r = await fetch(url);
-  const t = await r.text();
-  const j = JSON.parse(t.substring(47, t.length - 2));
-
-  const rows = j.table.rows;
-  const cols = j.table.cols;
-  const showCols = [0,1,4,5,6,7,9,10]; // A,B,E,F,G,H,J,K
-
-  let data = [];
-  rows.forEach(r => {
-    const c = r.c || [];
-    if (`${c[2]?.v}-${c[3]?.v}`.toUpperCase() !== id.toUpperCase()) return;
-    data.push(c);
-  });
-
-  if (!data.length) {
-    out.innerHTML = "<b>No history data found.</b>";
+  if (!id) {
+    document.getElementById("drive").innerHTML = "No drive ID found in URL.";
     return;
   }
 
-  let html = `
-  <div class="card">
-    <h3>History</h3>
+  document.getElementById("drive").innerHTML = `
+    <div class="card">
+      <h3>${id}</h3>
 
-    <div class="controls">
-      <input id="search" placeholder="Search…">
-      <button onclick="exportExcel()">Export Excel</button>
-      <button onclick="window.print()">Export PDF</button>
+      <p><span class="label">Pump Type:</span> CIRCULATION PUMP</p>
+
+      <div class="grid">
+        <div>
+          <p><span class="label">Ratings:</span> 101</p>
+          <p><span class="label">FLC:</span> 178</p>
+        </div>
+
+        <div>
+          <p><span class="label">SFU:</span> 3 KX 2530-1YD001C</p>
+          <p><span class="label">Fuse:</span> NH2,315A,3NA3 144-7Y</p>
+          <p><span class="label">Contactor:</span> 3RT12 66, Siemens</p>
+          <p><span class="label">Relay:</span> 7SJ611</p>
+        </div>
+
+        <div>
+          <p><span class="label">CT (M):</span> 300/1 ,15VA,cl-1</p>
+          <p><span class="label">CT (P):</span> 300/5 ,10VA,cl-5P10</p>
+          <p><span class="label">Aux Contactor:</span> 3TH30 22-OAOU, 2NO+2NC, 240V AC</p>
+        </div>
+      </div>
+
+      <div class="button-wrap">
+        <button onclick="openHistory()">View History</button>
+      </div>
     </div>
-
-    <table id="historyTable">
-      <thead><tr>
   `;
-
-  showCols.forEach(i => html += `<th>${cols[i].label}</th>`);
-  html += "</tr></thead><tbody>";
-
-  data.forEach(r => {
-    html += "<tr>";
-    showCols.forEach(i => {
-      let v = formatDate(r[i]?.v ?? "");
-      if (i === 10 && v) v = `<a href="${v}" target="_blank">Open</a>`;
-      html += `<td>${v}</td>`;
-    });
-    html += "</tr>";
-  });
-
-  html += "</tbody></table></div>";
-  out.innerHTML = html;
-
-  document.getElementById("search").onkeyup = function() {
-    const q = this.value.toLowerCase();
-    document.querySelectorAll("#historyTable tbody tr")
-      .forEach(tr => tr.style.display =
-        tr.innerText.toLowerCase().includes(q) ? "" : "none");
-  };
 }
 
-// ---------- EXPORT ----------
-function exportExcel() {
-  let csv = [];
-  document.querySelectorAll("#historyTable tr").forEach(row => {
-    csv.push([...row.children].map(td =>
-      `"${td.innerText.replace(/"/g,'""')}"`
-    ).join(","));
-  });
+function openHistory() {
+  const id = new URLSearchParams(window.location.search).get("id");
+  if (!id) return;
 
-  const a = document.createElement("a");
-  a.href = URL.createObjectURL(new Blob([csv.join("\n")]));
-  a.download = "history.csv";
-  a.click();
+  const url =
+    "https://08electricaldata.github.io/drive-viewer/history.html?id=" +
+    encodeURIComponent(id);
+
+  window.open(url, "_blank");
 }
 
 loadDrive();
