--- a/history.html
+++ b/history.html
@@ -13,12 +13,11 @@ body {
 h2, h3 {
   color: #003f88;
   text-align: center;
-  font-size: 34px;   /* bigger heading */
+  font-size: 34px;
   font-weight: 700;
   margin-bottom: 24px;
 }
 
-  
 .card {
   padding: 18px;
   background: white;
@@ -112,6 +111,19 @@ function formatDate(v) {
   return v ?? "";
 }
 
+// ---------- DATE PARSER (FOR SORTING) ----------
+function parseDate(v) {
+  if (typeof v === "string" && v.startsWith("Date(")) {
+    const p = v.match(/\d+/g);
+    if (p) return new Date(p[0], p[1], p[2]);
+  }
+  if (typeof v === "string" && /^\d{2}\/\d{2}\/\d{4}$/.test(v)) {
+    const [d,m,y] = v.split("/");
+    return new Date(y, m - 1, d);
+  }
+  return new Date(0);
+}
+
 // ---------- LOAD DRIVE ----------
 async function loadDrive() {
   const id = new URLSearchParams(location.search).get("id");
@@ -194,11 +206,15 @@ async function loadHistory(id) {
   const showCols = [0,1,4,5,6,7,9,10]; // A,B,E,F,G,H,J,K
 
   let data = [];
+
   rows.forEach(r => {
     const c = r.c || [];
     if (`${c[2]?.v}-${c[3]?.v}`.toUpperCase() !== id.toUpperCase()) return;
     data.push(c);
   });
+
+  // 🔥 SORT BY DATE (LATEST → OLDEST)
+  data.sort((a, b) => parseDate(b[0]?.v) - parseDate(a[0]?.v));
 
   if (!data.length) {
     out.innerHTML = "<b>No history data found.</b>";
