--- a/index2.html
+++ b/index2.html
@@ -7,37 +7,53 @@
 
 <style>
 body { font-family: Arial, sans-serif; margin: 0; background: #f2f6ff; }
+
 .header-bar {
   position: sticky; top: 0; z-index: 1000;
   background: #f2f6ff; padding: 10px 12px;
   display: flex; align-items: center; gap: 10px;
   box-shadow: 0 2px 6px rgba(0,0,0,.15);
 }
+
 .header-title { flex: 1; text-align: center; }
 .header-title h2 { margin: 0; color: #003f88; }
-.header-title small { font-size: 14px; font-weight: 600; }
+.header-title small { display: block; font-size: 15px; font-weight: 600; }
+
 .icon-btn {
   background: #003f88; color: #fff;
   border: none; border-radius: 8px;
   padding: 10px 12px; font-size: 18px; cursor: pointer;
 }
+
 .container { padding: 20px; }
+
 .card {
   background: #fff; padding: 20px;
-  border-radius: 12px; box-shadow: 0 2px 6px rgba(0,0,0,.15);
+  border-radius: 12px;
+  box-shadow: 0 2px 6px rgba(0,0,0,.15);
 }
+
 .label { font-weight: bold; color: #003f88; }
+
 .grid {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
-  gap: 14px;
+  gap: 16px;
 }
+
 .action-btn {
-  margin-top: 20px; padding: 10px 18px;
-  background: #003f88; color: #fff;
-  border: none; border-radius: 8px; cursor: pointer;
+  margin-top: 20px;
+  padding: 10px 18px;
+  background: #003f88;
+  color: #fff;
+  border: none;
+  border-radius: 8px;
+  cursor: pointer;
 }
-@media(max-width:768px){ .grid{grid-template-columns:1fr;} }
+
+@media(max-width:768px){
+  .grid { grid-template-columns: 1fr; }
+}
 </style>
 </head>
 
@@ -58,139 +74,176 @@ body { font-family: Arial, sans-serif; margin: 0; background: #f2f6ff; }
 
 <script>
 const DRIVE_JSON =
- "https://raw.githubusercontent.com/08electricaldata/08electricaldata-json/main/drive.json";
+  "https://raw.githubusercontent.com/08electricaldata/08electricaldata-json/main/drive.json";
 
-const HISTORY_YEARS=[2026,2025,2024,2023,2022,2021,2020,2019];
-const HISTORY_BASE=
- "https://raw.githubusercontent.com/08electricaldata/08electricaldata-json/main/history/";
+const HISTORY_YEARS = [2026,2025,2024,2023,2022,2021,2020,2019];
+const HISTORY_BASE =
+  "https://raw.githubusercontent.com/08electricaldata/08electricaldata-json/main/history/";
 
-function goHome(){location.href="https://08electricaldata.github.io/";}
-function goBack(){history.back();}
+function goHome(){ location.href="https://08electricaldata.github.io/"; }
+function goBack(){ history.back(); }
 
 function parseDate(v){
   if(!v) return null;
   if(/^\d{2}\/\d{2}\/\d{4}$/.test(v)){
-    const[d,m,y]=v.split("/"); return new Date(y,m-1,d);
+    const[d,m,y]=v.split("/");
+    return new Date(y,m-1,d);
   }
   return new Date(v);
 }
+
 function fmt(d){
-  if(!d||isNaN(d)) return "NO RECORDS";
+  if(!d || isNaN(d)) return "NO RECORDS";
   return `${String(d.getDate()).padStart(2,"0")}-${String(d.getMonth()+1).padStart(2,"0")}-${d.getFullYear()}`;
 }
 
 async function lastDates(id,map){
-  const out={}; Object.keys(map).forEach(k=>out[k]=null);
+  const res={};
+  Object.keys(map).forEach(k=>res[k]=null);
+
   for(const y of HISTORY_YEARS){
     try{
-      const j=await (await fetch(HISTORY_BASE+y+".json")).json();
+      const j = await (await fetch(HISTORY_BASE + y + ".json")).json();
       j.rows.forEach(r=>{
-        if(`${r[2]}-${r[3]}`.toUpperCase()!==id) return;
-        const job=(r[7]||"").toUpperCase();
-        const d=parseDate(r[4]);
+        if(`${r[2]}-${r[3]}`.toUpperCase() !== id) return;
+        const job = (r[7] || "").toUpperCase().trim();
+        const d = parseDate(r[4]);
         Object.entries(map).forEach(([k,v])=>{
-          if(job===v && (!out[k]||d>out[k])) out[k]=d;
+          if(job === v && (!res[k] || d > res[k])) res[k] = d;
         });
       });
     }catch(e){}
   }
-  Object.keys(out).forEach(k=>out[k]=out[k]?fmt(out[k]):"NO RECORDS");
-  return out;
+
+  Object.keys(res).forEach(k => res[k] = res[k] ? fmt(res[k]) : "NO RECORDS");
+  return res;
 }
 
 async function loadData(){
-  const id=new URLSearchParams(location.search).get("id");
-  const j=await (await fetch(DRIVE_JSON)).json();
-  const c=j.rows.find(r=>`${r[1]}-${r[2]}`.toUpperCase()===id.toUpperCase());
-  if(!c){content.innerHTML="<div class='card'>Not Found</div>";return;}
-  if(c[1]==="TRANSFORMER") showTransformer(c,id);
-  else if(c[1]==="BREAKER") showBreaker(c,id);
-  else showMotor(c,id);
+  const id = new URLSearchParams(location.search).get("id");
+  if(!id) return;
+
+  const j = await (await fetch(DRIVE_JSON)).json();
+  const c = j.rows.find(r => `${r[1]}-${r[2]}`.toUpperCase() === id.toUpperCase());
+
+  if(!c){
+    content.innerHTML = "<div class='card'>Data Not Found</div>";
+    return;
+  }
+
+  const TYPE = (c[1] || "").toUpperCase().trim();
+
+  if(TYPE === "TRANSFORMER"){
+    showTransformer(c, id.toUpperCase());
+  }
+  else if(TYPE === "BREAKER"){
+    showBreaker(c, id.toUpperCase());
+  }
+  else{
+    showMotor(c, id.toUpperCase());
+  }
 }
 
 /* ================= MOTOR (UNCHANGED) ================= */
 async function showMotor(c,id){
-  const p=await lastDates(id.toUpperCase(),{
-    rep:"MOTOR REPLACEMENT",pm:"MOTOR PM",
-    mod:"MODULE PM",vfd:"VFD PM"
+  const p = await lastDates(id,{
+    rep:"MOTOR REPLACEMENT",
+    pm:"MOTOR PM",
+    mod:"MODULE PM",
+    vfd:"VFD PM"
   });
-  content.innerHTML=`
-  <div class="card"><h3>${c[1]} – ${c[2]}</h3>
-  <div class="grid">
-    <p><span class="label">Rating:</span> ${c[5]} KW</p>
-    <p><span class="label">FLC:</span> ${c[10]} A</p>
-    <p><span class="label">SFU:</span> ${c[14]}</p>
-    <p><span class="label">Fuse:</span> ${c[15]}</p>
-    <p><span class="label">Contactor:</span> ${c[16]}</p>
-    <p><span class="label">Relay/VFD:</span> ${c[17]}</p>
-    <p><span class="label">CT (M):</span> ${c[18]}</p>
-    <p><span class="label">CT (P):</span> ${c[19]}</p>
-    <p><span class="label">Aux Contactor:</span> ${c[20]}</p>
-    <p><span class="label">Ammeter:</span> ${c[21]}</p>
-    <p><span class="label">Ind Lamp:</span> ${c[22]}</p>
-    <p><span class="label">No of Spare Motors:</span> ${c[23]}</p>
 
-    <p><span class="label">Last Motor Replacement:</span> ${p.rep}</p>
-    <p><span class="label">Last Motor PM:</span> ${p.pm}</p>
-    <p><span class="label">Last Module PM:</span> ${p.mod}</p>
-    <p><span class="label">Last VFD PM:</span> ${p.vfd}</p>
-  </div>
-  <button class="action-btn" onclick="openHistory()">📜 History</button></div>`;
+  content.innerHTML = `
+  <div class="card">
+    <h3>${c[1]} – ${c[2]}</h3>
+
+    <div class="grid">
+      <p><span class="label">Rating:</span> ${c[5]} KW</p>
+      <p><span class="label">FLC:</span> ${c[10]} A</p>
+      <p><span class="label">SFU:</span> ${c[14]}</p>
+      <p><span class="label">Fuse:</span> ${c[15]}</p>
+      <p><span class="label">Contactor:</span> ${c[16]}</p>
+      <p><span class="label">Relay/VFD:</span> ${c[17]}</p>
+      <p><span class="label">CT (M):</span> ${c[18]}</p>
+      <p><span class="label">CT (P):</span> ${c[19]}</p>
+      <p><span class="label">Aux Contactor:</span> ${c[20]}</p>
+      <p><span class="label">Ammeter:</span> ${c[21]}</p>
+      <p><span class="label">Ind Lamp:</span> ${c[22]}</p>
+      <p><span class="label">No of Spare Motors:</span> ${c[23]}</p>
+
+      <p><span class="label">Last Motor Replacement:</span> ${p.rep}</p>
+      <p><span class="label">Last Motor PM:</span> ${p.pm}</p>
+      <p><span class="label">Last Module PM:</span> ${p.mod}</p>
+      <p><span class="label">Last VFD PM:</span> ${p.vfd}</p>
+    </div>
+
+    <button class="action-btn" onclick="openHistory()">📜 History</button>
+  </div>`;
 }
 
-/* ================= TRANSFORMER (RESTORED) ================= */
+/* ================= TRANSFORMER ================= */
 async function showTransformer(c,id){
-  const t=await lastDates(id.toUpperCase(),{
+  const t = await lastDates(id,{
     pm:"TRANSFORMER PM",
     oh:"TRANSFORMER O/H",
     leak:"TRANSFORMER L/A",
     top:"OIL TUPOP",
     chk:"T/F OIL CHECK"
   });
-  content.innerHTML=`
-  <div class="card"><h3>Transformer – ${c[2]}</h3>
-  <div class="grid">
-    <p><span class="label">TR Sl No:</span> ${c[3]}</p>
-    <p><span class="label">Make:</span> ${c[4]}</p>
-    <p><span class="label">Rating:</span> ${c[5]} KVA</p>
-    <p><span class="label">From S/S:</span> ${c[6]}</p>
-    <p><span class="label">Unit S/S:</span> ${c[7]}</p>
-    <p><span class="label">% Impedance:</span> ${c[8]}</p>
-    <p><span class="label">LT SWBD:</span> ${c[9]}</p>
-    <p><span class="label">Panel Rating:</span> ${c[10]}</p>
 
-    <p><span class="label">Last Transformer PM:</span> ${t.pm}</p>
-    <p><span class="label">Last Transformer O/H:</span> ${t.oh}</p>
-    <p><span class="label">Last Oil Leakage Arrest:</span> ${t.leak}</p>
-    <p><span class="label">Last Oil Top-up:</span> ${t.top}</p>
-    <p><span class="label">Last Oil Checked:</span> ${t.chk}</p>
-  </div>
-  <button class="action-btn" onclick="openHistory()">📜 History</button></div>`;
+  content.innerHTML = `
+  <div class="card">
+    <h3>Transformer – ${c[2]}</h3>
+
+    <div class="grid">
+      <p><span class="label">TR Sl No:</span> ${c[3]}</p>
+      <p><span class="label">Make:</span> ${c[4]}</p>
+      <p><span class="label">Rating:</span> ${c[5]} KVA</p>
+      <p><span class="label">From S/S:</span> ${c[6]}</p>
+      <p><span class="label">Unit S/S:</span> ${c[7]}</p>
+      <p><span class="label">% Impedance:</span> ${c[8]}</p>
+      <p><span class="label">LT SWBD:</span> ${c[9]}</p>
+      <p><span class="label">Panel Rating:</span> ${c[10]}</p>
+
+      <p><span class="label">Last Transformer PM:</span> ${t.pm}</p>
+      <p><span class="label">Last Transformer O/H:</span> ${t.oh}</p>
+      <p><span class="label">Last Oil Leakage Arrest:</span> ${t.leak}</p>
+      <p><span class="label">Last Oil Top-up:</span> ${t.top}</p>
+      <p><span class="label">Last Oil Checked:</span> ${t.chk}</p>
+    </div>
+
+    <button class="action-btn" onclick="openHistory()">📜 History</button>
+  </div>`;
 }
 
-/* ================= BREAKER (RESTORED) ================= */
+/* ================= BREAKER ================= */
 async function showBreaker(c,id){
-  const b=await lastDates(id.toUpperCase(),{pm:"BREAKER PM"});
-  content.innerHTML=`
-  <div class="card"><h3>Breaker – ${c[2]}</h3>
-  <div class="grid">
-    <p><span class="label">Compartment No:</span> ${c[3]}</p>
-    <p><span class="label">Breaker Desc:</span> ${c[4]}</p>
-    <p><span class="label">Make:</span> ${c[5]}</p>
-    <p><span class="label">Rating:</span> ${c[6]} A</p>
-    <p><span class="label">Type:</span> ${c[7]}</p>
-    <p><span class="label">LT SWBD:</span> ${c[9]}</p>
-    <p><span class="label">Panel Rating:</span> ${c[10]}</p>
+  const b = await lastDates(id,{ pm:"BREAKER PM" });
 
-    <p><span class="label">Last Breaker PM:</span> ${b.pm}</p>
-  </div>
-  <button class="action-btn" onclick="openHistory()">📜 History</button></div>`;
+  content.innerHTML = `
+  <div class="card">
+    <h3>Breaker – ${c[2]}</h3>
+
+    <div class="grid">
+      <p><span class="label">Compartment No:</span> ${c[3]}</p>
+      <p><span class="label">Breaker Desc:</span> ${c[4]}</p>
+      <p><span class="label">Make:</span> ${c[5]}</p>
+      <p><span class="label">Rating:</span> ${c[6]} A</p>
+      <p><span class="label">Type:</span> ${c[7]}</p>
+      <p><span class="label">LT SWBD:</span> ${c[9]}</p>
+      <p><span class="label">Panel Rating:</span> ${c[10]}</p>
+
+      <p><span class="label">Last Breaker PM:</span> ${b.pm}</p>
+    </div>
+
+    <button class="action-btn" onclick="openHistory()">📜 History</button>
+  </div>`;
 }
 
 function openHistory(){
-  const id=new URLSearchParams(location.search).get("id");
-  location.href=
-    "https://08electricaldata.github.io/drive-viewer/history.html?id="+
+  const id = new URLSearchParams(location.search).get("id");
+  location.href =
+    "https://08electricaldata.github.io/drive-viewer/history.html?id=" +
     encodeURIComponent(id);
 }
 
